Bug 99753 - Debug use of new Boolean(boolean)