@@ -142,7 +142,7 @@ public abstract class Breakpoint extends PlatformObject implements IBreakpoint {
 	 */
 	public void setPersisted(boolean persisted) throws CoreException {
 		if (isPersisted() != persisted) {
-			setAttributes(new String[] {PERSISTED, IMarker.TRANSIENT}, new Object[] {new Boolean(persisted), new Boolean(!persisted)});
+			setAttributes(new String[] {PERSISTED, IMarker.TRANSIENT}, new Object[] {Boolean.valueOf(persisted), Boolean.valueOf(!persisted)});
 		}
 	}
 	
